Added basic functions for filter, and getSkinsById
